--- a/meaningForm.fmx
+++ b/meaningForm.fmx
@@ -20,33 +20,42 @@ object meaningForm1: TmeaningForm1
   FormFactor.Devices = [Desktop, iPhone, iPad]
   OnShow = FormShow
   DesignerMasterStyle = 0
-  object meaningText: TLabel
-    AutoSize = True
-    StyledSettings = [Family, Size, Style]
-    Position.X = 20.000000000000000000
-    Position.Y = 8.000000000000000000
-    Size.Width = 260.000000000000000000
-    Size.Height = 16.000000000000000000
-    Size.PlatformDefault = False
-    TextSettings.FontColor = xFFFDF0D5
-    TextSettings.HorzAlign = Center
-    TextSettings.Trimming = None
-    Text = 'meaningText'
-    TabOrder = 0
-  end
   object ScrollBar: TScrollBar
     Align = Right
     HitTest = False
     Max = 300.000000000000000000
     SmallChange = 40.000000000000000000
     Orientation = Vertical
-    Position.X = 282.000000000000000000
+    Position.X = 280.000000000000000000
     Size.Width = 20.000000000000000000
     Size.Height = 300.000000000000000000
     Size.PlatformDefault = False
     StyleLookup = 'ScrollBarStyle1'
-    TabOrder = 1
+    TabOrder = 0
     Visible = False
     OnChange = ScrollBarChange
+  end
+  object ScrollBox: TScrollBox
+    Position.X = 8.000000000000000000
+    Position.Y = 8.000000000000000000
+    Size.Width = 284.000000000000000000
+    Size.Height = 284.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 1
+    Viewport.Width = 284.000000000000000000
+    Viewport.Height = 284.000000000000000000
+    object meaningText: TLabel
+      Align = Top
+      AutoSize = True
+      StyledSettings = []
+      Size.Width = 284.000000000000000000
+      Size.Height = 16.000000000000000000
+      Size.PlatformDefault = False
+      TextSettings.FontColor = xFFFDF0D5
+      TextSettings.HorzAlign = Center
+      TextSettings.Trimming = None
+      Text = 'meaningText'
+      TabOrder = 0
+    end
   end
 end
