--- a/HeaderFooterTemplate.LgXhdpiTb.fmx
+++ b/HeaderFooterTemplate.LgXhdpiTb.fmx
@@ -115,4 +115,7 @@
     Position.X = 360.000000000000000000
     Position.Y = 560.000000000000000000
   end
+  inherited meaning: TButton
+    TextSettings.Font.StyleExt = {00070000000000000004000000}
+  end
 end
