--- a/HeaderFooterTemplate.NmXhdpiPh.fmx
+++ b/HeaderFooterTemplate.NmXhdpiPh.fmx
@@ -92,4 +92,7 @@ inherited MainForm_NmXhdpiPh: TMainForm_NmXhdpiPh
   inherited R11: TButton
     TextSettings.Font.StyleExt = {00020000000000000004000000}
   end
+  inherited meaning: TButton
+    TextSettings.Font.StyleExt = {00070000000000000004000000}
+  end
 end
