--- a/languageForm.fmx
+++ b/languageForm.fmx
@@ -10,25 +10,8 @@ object language: Tlanguage
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
-  OnDeactivate = FormDeactivate
   OnShow = FormShow
   DesignerMasterStyle = 3
-  object okButton: TButton
-    StyledSettings = [Family]
-    Margins.Left = 2.000000000000000000
-    Margins.Top = 2.000000000000000000
-    Margins.Right = 2.000000000000000000
-    Margins.Bottom = 2.000000000000000000
-    Position.X = 24.000000000000000000
-    Position.Y = 106.000000000000000000
-    Size.Width = 80.000000000000000000
-    Size.Height = 22.000000000000000000
-    Size.PlatformDefault = False
-    TabOrder = 3
-    Text = #1079#1072#1082#1088#1099#1090#1100
-    Visible = False
-    OnClick = okButtonClick
-  end
   object langButton1: TButton
     StyledSettings = [Family]
     Margins.Left = 2.000000000000000000
@@ -40,9 +23,10 @@ object language: Tlanguage
     Size.Width = 80.000000000000000000
     Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 6
+    TabOrder = 5
     Text = #1088#1091#1089#1089#1082#1080#1081
     TextSettings.Font.Size = 16.000000000000000000
+    TextSettings.Trimming = None
     OnClick = langButton1Click
   end
   object langButton2: TButton
@@ -56,9 +40,10 @@ object language: Tlanguage
     Size.Width = 80.000000000000000000
     Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 5
+    TabOrder = 4
     Text = 'english'
     TextSettings.Font.Size = 16.000000000000000000
+    TextSettings.Trimming = None
     OnClick = langButton2Click
   end
   object langButton4: TButton
@@ -72,9 +57,10 @@ object language: Tlanguage
     Size.Width = 80.000000000000000000
     Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 4
+    TabOrder = 3
     Text = 'espa'#241'ol'
     TextSettings.Font.Size = 16.000000000000000000
+    TextSettings.Trimming = None
     OnClick = langButton4Click
   end
 end
