--- a/HeaderFooterTemplate.fmx
+++ b/HeaderFooterTemplate.fmx
@@ -1242,7 +1242,7 @@
     AutoTranslate = False
     CanFocus = False
     Enabled = False
-    StyledSettings = [Family, Size, Style]
+    StyledSettings = [Family, Style]
     Position.X = 344.000000000000000000
     Position.Y = 528.000000000000000000
     Size.Width = 40.000000000000000000
