X-men theme added | Windows - O_X buttons turned off

--- a/infoForm.fmx
+++ b/infoForm.fmx
@@ -1,6 +1,7 @@
 object informationForm: TinformationForm
   Left = 0
   Top = 0
+  BorderIcons = []
   BorderStyle = Single
   Caption = 'info'
   ClientHeight = 328
