--- a/statistics.fmx
+++ b/statistics.fmx
@@ -1,6 +1,7 @@
 object statsForm: TstatsForm
   Left = 0
   Top = 0
+  BorderIcons = []
   BorderStyle = Single
   Caption = 'stats'
   ClientHeight = 248
@@ -9,7 +10,6 @@ object statsForm: TstatsForm
   Fill.Kind = Solid
   Position = Designed
   StyleLookup = 'pushpanel'
-  FormStyle = Popup
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
