--- a/meaningForm.fmx
+++ b/meaningForm.fmx
@@ -6,7 +6,7 @@ object meaningForm1: TmeaningForm1
   Caption = 'meaning'
   ClientHeight = 300
   ClientWidth = 300
-  Fill.Color = xFF003049
+  Fill.Color = claNull
   Fill.Kind = Solid
   Position = Designed
   SystemStatusBar.BackgroundColor = xFF669BBC
@@ -20,6 +20,7 @@ object meaningForm1: TmeaningForm1
   FormFactor.Height = 300
   FormFactor.Devices = [Desktop, iPhone, iPad]
   OnShow = FormShow
+  OnHide = FormHide
   DesignerMasterStyle = 0
   object ScrollBar: TScrollBar
     Align = Right
@@ -57,6 +58,18 @@ object meaningForm1: TmeaningForm1
       TextSettings.Trimming = None
       Text = 'meaningText'
       TabOrder = 0
+      object FontColorAnimation: TColorAnimation
+        Duration = 0.200000002980232200
+        PropertyName = 'TextSettings.FontColor'
+        StartValue = claWhite
+        StopValue = claWhite
+      end
     end
+  end
+  object FillColorAnimation: TColorAnimation
+    Duration = 0.200000002980232200
+    PropertyName = 'Fill.Color'
+    StartValue = claWhite
+    StopValue = claWhite
   end
 end
